# tox-minversions

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: mypy.yml  octocheese.yml  python_ci_linux.yml
tests/: test_plugin.py
tox_minversions/: __init__.py
